--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "dependencies": {
     "@hotwired/turbo-rails": "^7.2.4",
     "esbuild": "^0.16.17",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    // "react": "^18.2.0",
+    // "react-dom": "^18.2.0",
     "stimulus": "^3.2.1"
   },
   "scripts": {
